[Renault] Unit tests + Integration tests